# Projetos-Universidade

./: README.md
1º Ano/LI1/2022li1g055/: 2022li1g055.cabal  README.md
1º Ano/LI1/2022li1g055/TarefasDocumentadas/html/: LI12223.html  Tarefa1_2022li1g055.html  Tarefa2_2022li1g055.html  Tarefa3_2022li1g055.html  Tarefa4_2022li1g055.html  doc-index.html  index.html
1º Ano/LI1/2022li1g055/src/: LI12223.hi  LI12223.hs  Main.hs  Tarefa1_2022li1g055.hi  Tarefa1_2022li1g055.hs  Tarefa2_2022li1g055.hi  Tarefa2_2022li1g055.hs  Tarefa3_2022li1g055.hi  Tarefa3_2022li1g055.hs  Tarefa4_2022li1g055.hi  Tarefa4_2022li1g055.hs  Tarefa5_2022li1g055.hi  Tarefa5_2022li1g055.hs  Tarefa6_2022li1g055.hi  Tarefa6_2022li1g055.hs
1º Ano/LI1/2022li1g055/tests/: Spec.hs  Tarefa1_2022li1g055_Spec.hs  Tarefa2_2022li1g055_Spec.hs  Tarefa3_2022li1g055_Spec.hs  Tarefa4_2022li1g055_Spec.hs
1º Ano/LI2/: Makefile  ProjetoLI2.c  jogo
1º Ano/LI2/ProjetoLi/: ProjetoLI2.c  projetoLI  teste  teste.c
2º Ano/Base-de-Dados/: Agencia.mwb  Agencia.mwb.bak  Agencia_de_detetives.pptx  Agência de Detetives.docx  BD-Relatorio.doc  BD-guiao.docx  Exploração_Agencia.sql  ModeloFisico_AgenciadeDetetives.sql  Povoamento_AgenciadeDetetives.sql
2º Ano/LI3/grupo-75/: README.md
2º Ano/Sistemas-Operativos/: SO.docx
2º Ano/Sistemas-Operativos/grupo-88/: Makefile  dclient  dserver
3º Ano/Comunicações-Computador/CC_TP2_PL4_G7/: NMS_Agent.java  NMS_Server.java
3º Ano/Desenvolvimento-Sistemas-Software/DSS_FaseFinal/: DSS_Relatorio.docx  main.java
3º Ano/Interface-Pessoa-Máquina/TrabalhoIPM_G44/: IPM.vpp  (+1 more)
(+137 files in other folders)
