cabal-version:      2.4
name:               2022li1g055
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             João Pedro Loureiro Pinto <a104270@alunos.uminho.pt>
                    Diogo Alexandre Gomes Silva <a104183@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g055
    Tarefa2_2022li1g055
    Tarefa3_2022li1g055
    Tarefa4_2022li1g055
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g055
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g055
    Tarefa2_2022li1g055
    Tarefa3_2022li1g055
    Tarefa4_2022li1g055
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g055-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g055
    Tarefa2_2022li1g055
    Tarefa3_2022li1g055
    Tarefa4_2022li1g055
    Tarefa1_2022li1g055_Spec
    Tarefa2_2022li1g055_Spec
    Tarefa3_2022li1g055_Spec
    Tarefa4_2022li1g055_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
